--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
+    "postcss": "^8.4.47",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
+    "tailwindcss": "^3.4.12"
   },
   "devDependencies": {
     "eslint": "8.50.0",
